# KegeratorDisplay

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  README.md  build.sh  coverageReport.sh  generateCoverageReport.sh
doc/: architecture.odg
lib/cucumber-cpp-0.5/: .gitignore
src/main/: AcceptanceTestKegerator.cpp  AcceptanceTestKegerator.h  GuiKegerator.cpp  GuiKegerator.h  Kegerator.cpp  Kegerator.h  Main.cpp  TargetSpecificDependencyFactory.cpp  TargetSpecificDependencyFactory.h
src/main/cliview/: CliView.cpp  CliView.h
src/main/controller/: AnalogDigitalConverterSensor.h  AnalogDigitalConverterSensorController.cpp  AnalogDigitalConverterSensorController.h  ControllerException.h  DS18B20Sensor.h  DS18B20SensorReader.h  DS18B20SensorReaderStaticValue.cpp  DS18B20TemperatureSensor.h  DS18B20TemperatureSensorController.cpp  DS18B20TemperatureSensorController.h  InvalidAnalogDigitalConverterSensorControllerArgumentException.h  InvalidDS18B20SensorReadingException.h  InvalidSensorSamplerArgumentException.h  InvalidUserInputControllerArgumentException.h  SensorController.h  SensorSampler.cpp  SensorSampler.h  TemperatureSensor.h  TemperatureSensorController.cpp  TemperatureSensorController.h  UserInputController.cpp  UserInputController.h  UserInputControllerImpl.cpp  UserInputControllerImpl.h
src/main/controllers/: AnalogDigitalConverterSensor.h  AnalogDigitalConverterSensorController.cpp  AnalogDigitalConverterSensorController.h  DeviceTapData.cpp  DeviceTapData.h  InvalidAnalogDigitalConverterSensorControllerArgumentException.h  InvalidSensorSamplerArgumentException.h  SensorController.h  SensorSampler.cpp  SensorSampler.h  TemperatureSensor.h  TemperatureSensorController.cpp  TemperatureSensorController.h  UserInputController.h  UserInputControllerImpl.cpp  UserInputControllerImpl.h
src/main/devices/: AcceptanceTestInputDevice.cpp  AcceptanceTestInputDevice.h  AdcSensorMCP3008.cpp  AdcSensorMCP3008.h  DS18B20Sensor.cpp  DS18B20Sensor.h  DS18B20SensorReaderImpl.cpp  DS18B20SensorReaderImpl.h  DS18B20SensorReaderStaticValue.cpp  DS18B20SensorReaderStaticValue.h  DeviceException.h  InvalidAdcSensorMCP3008ArgumentException.h  InvalidAdcSensorReadingException.h  InvalidDS18B20SensorReaderArgument.h  InvalidDS18B20SensorReadingException.h  QmlButtonHandler.h  QmlContextPropertyRegistrator.h  QmlContextPropertyRegistratorImpl.cpp  QmlContextPropertyRegistratorImpl.h  QmlInputDevice.cpp  QmlInputDevice.h  QtQmlInputDevice.cpp  QtQmlInputDevice.h  SpiReader.h  SpiReaderStaticValue.cpp  SpiReaderStaticValue.h
src/main/entities/: AlcoholByVolume.h  Bar.cpp  Bar.h  Beer.cpp  Beer.h  Date.cpp  Date.h  EntityException.h  InternationalBitternessUnits.cpp  InternationalBitternessUnits.h  InvalidAlcoholByVolumeException.h  InvalidDateException.h  InvalidInternationalBitternessUnitsException.h  InvalidSpecificGravityException.h  RelativePressureBar.cpp  RelativePressureBar.h  SpecificGravity.h  Tap.cpp  Tap.h  Temperature.cpp  Temperature.h
src/main/interactors/: AdcReading10Bit.cpp  AdcReading10Bit.h  AnalogDigitalConverterUpdateRequestObserver.h  BeerUpdateResponse.h  InteractorException.h  InvalidAdcReadingValueException.h  InvalidScreenTouchedInteractorArgumentException.h  InvalidTapUpdateInteractorArgumentException.h  Presenter.h  PressureUpdateInteractor.cpp  PressureUpdateInteractor.h  PressureUpdateResponse.h  ScreenTouchedInteractor.cpp  ScreenTouchedInteractor.h  ScreenTouchedRequest.cpp  ScreenTouchedRequest.h  ScreenTouchedRequestObserver.h  ScreenTouchedResponse.h  Storage.h  TapClearInteractor.cpp  TapClearInteractor.h  TapClearRequest.cpp  TapClearRequest.h  TapClearRequestObserver.h  TapClearResponse.h  TapSide.h  TapUpdateInteractor.cpp  TapUpdateInteractor.h  TapUpdateRequest.cpp  TapUpdateRequest.h  TapUpdateRequestObserver.h  TapUpdateResponse.h  TemperatureUpdateInteractor.cpp  TemperatureUpdateInteractor.h  TemperatureUpdateRequest.cpp  TemperatureUpdateRequest.h  TemperatureUpdateRequestObserver.h  TemperatureUpdateResponse.h
src/main/monitor/: AlcoholByVolume.cpp  AlcoholByVolume.h  Beer.cpp  Beer.h  BeerUpdate.h  BeerUpdateResponse.h  BrewDate.cpp  BrewDate.h  Date.cpp  Date.h  InteractorException.h  InternationalBitternessUnits.cpp  InternationalBitternessUnits.h  InvalidAlcoholByVolumeException.h  InvalidDateException.h  InvalidInternationalBitternessUnitsException.h  InvalidSpecificGravityException.h  InvalidTapUpdateInteractorArgumentException.h  InvalidTapUpdatorArgumentException.h  Kegerator.cpp  Kegerator.h  KegeratorDisplayException.h  KegeratorObserver.h  Presenter.h  SpecificGravity.cpp  SpecificGravity.h  Storage.h  Tap.cpp  Tap.h  TapInteractor.cpp  TapInteractor.h  TapUpdate.h  TapUpdateInteractor.cpp  TapUpdateInteractor.h  TapUpdateRequest.cpp  TapUpdateRequest.h  TapUpdateResponse.h  TapUpdator.cpp  TapUpdator.h  Temperature.cpp  (+15 more)
src/main/presenter/: GuiPresenter.cpp  GuiPresenter.h  GuiView.h  GuiViewModel.h  GuiViewTemperatureModel.h  PressureViewModel.h  PrintPresenter.cpp  PrintPresenter.h  PrintView.h  PrintViewModel.cpp  PrintViewModel.h  TapViewModel.h
src/main/shared/: BoostDeadlineTimer.cpp  BoostDeadlineTimer.h  BoostMutex.cpp  BoostMutex.h  DeadlineTimer.h  Mutex.h  ScopedMutex.cpp  ScopedMutex.h  Thread.h
src/main/storage/: BlackholeStorage.cpp  BlackholeStorage.h  BoostSerializationFileStorage.cpp  BoostSerializationFileStorage.h  BoostSerializer.h  FileReader.h  FileReaderImpl.cpp  FileReaderImpl.h  FileRemover.h  FileRemoverImpl.cpp  FileRemoverImpl.h  FileStorage.cpp  FileStorage.h  FileWriter.h  FileWriterImpl.cpp  FileWriterImpl.h
src/main/thread/: ApplicationThread.h  ApplicationThreadImpl.cpp  ApplicationThreadImpl.h  BoostDeadlineTimer.cpp  BoostDeadlineTimer.h  BoostMutex.cpp  BoostMutex.h  DeadlineTimer.h  Mutex.h  ScopedMutex.cpp  ScopedMutex.h  Thread.h
src/main/view/: AcceptanceTestGuiView.cpp  AcceptanceTestGuiView.h  CliView.cpp  CliView.h  QButtonHandler.h  QKegerator.h  QTap.h  (+7 more)
src/test/: AcceptanceTest.cpp  UnitTest.cpp
(+174 files in other folders)
